<resources>
    <string name="app_name">PeoEmergency</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="item_title_home">Home</string>
    <string name="item_title_emergency">Emergency</string>
    <string name="item_title_account">Account</string>
    <string name="image_logo_content_desc">Image Logo</string>
    <string name="txt_btn_sign_in">Sign In</string>
    <string name="txt_btn_sign_up">Sign Up</string>
    <string name="txt_input_hint_email">Email</string>
    <string name="txt_input_hint_password">Password</string>
    <string name="txt_warn_email">*email not valid, email is required unique character \'@gmail.com\'</string>
    <string name="txt_warn_password">*password min 8 character</string>
    <string name="txt_input_hint_username">Username</string>
    <string name="txt_warn_username">*username min 5 character</string>
    <string name="txt_input_hint_pass_conf">Password Confirmation</string>
    <string name="txt_warn_pass_conf">*confirmation password must equals</string>
    <string name="provider_sign_up_desc">Sign Up With Provider</string>
    <string name="txt_signup_provider">Or Sign Up With</string>
    <string name="txt_question_signup">If you have an account, please\ </string>
    <string name="txt_link_to_login_page">Sign In</string>
    <string name="txt_sign_in_provider">Or Sign In With</string>
    <string name="txt_question_sign_in">If you do not have an account, please\ </string>
    <string name="txt_link_to_sign_up">Sign Up</string>

    <string name="logout">Logout</string>
    <string name="hello">Hello &#x1f44b;!</string>
    <string name="welcome_nback">Welcome \nBack</string>
    <string name="sign_up">Sign Up\ </string>
    <string name="to">To</string>
    <string name="get">Get\ </string>
    <string name="started">Started</string>
    <string name="step_1">Step 1</string>
    <string name="man">Man</string>
    <string name="woman">woman</string>
    <string name="phone_number">Phone Number</string>
    <string name="image_finish_description">Image Finish Description</string>
    <string name="step_2">Step 2</string>
    <string name="hi_name">Hi %1$s</string>
    <string name="email_detail_register">Email: %1$s</string>
    <string name="phone_detail_register">Phone: %1$s</string>
    <string name="gender_detail_register">Gender: %1$s</string>
    <string name="birthday_detail_register">Birthday: %1$s</string>
    <string name="next_step">Next Step</string>
    <string name="image_step_1_description">Image Step 1 Description</string>
    <string name="image_step_2_description">Image step 2 description</string>
    <string name="finish">Finish</string>
    <string name="name">Name</string>
    <string name="emailSample">Email: akhmadfauzi@gmail.com</string>
    <string name="phoneSample">Phone: 082112966360</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="btn_text_save">save</string>
    <string name="btn_text_update">update</string>
    <string name="btn_text_add_note">Add Note</string>
    <string name="tv_text_activity_regis_finish">Thank you for providing information for application needs, your data is safe with us</string>
    <string name="tv_text_complete_information">Here is your complete information data</string>
    <string name="gender">Your Gender</string>
    <string name="birthday">birthday</string>
    <string name="tv_text_information_regis_finish">If there is a data error, you can update it in the profile section later</string>
    <string name="tv_text1_regis_step1">Please fill in additional information below</string>
    <string name="choose_gender">Choose gender</string>
    <string name="please_fill_in_additional_information_below">Please fill in additional information below</string>
    <string name="choose_profile_photo">choose profile photo</string>
    <string name="desc_image_birthday">image birthday</string>
    <string name="your_birthday">your birthday</string>
    <string name="tv_error">Oopps..\n errors!</string>
    <string name="tv_name_frag_home">Your name</string>
    <string name="tv_sample_city">Jakarta</string>
    <string name="btn_text_post">Post</string>
    <string name="tv_input_desc_post">Write something...</string>
    <string name="iv_desc_post_content">iv_desc_post_content</string>
    <string name="iv_icon_camera">iv_icon_camera</string>
    <string name="iv_ic_attach_file">iv_ic_attach_file</string>
    <string name="iv_ic_more_menu">iv_ic_more_menu</string>
    <string name="iv_profile_account_cover">iv_profile_account_cover</string>
    <string name="btn_back_press">btn_back_press</string>
    <string name="btn_more_menu">btn_more_menu</string>
    <string name="btn_text_edit_profile">Edit profile</string>
    <string name="text_join_sample">Joined Maret 2022</string>
    <string name="my_post">My Post</string>
    <string name="item_list_galery_capture">item_list_galery_capture</string>
    <string name="date_sample">24 mar 2022 | 07:00 wib</string>
    <string name="upload_image">upload_image</string>
    <string name="iv_ic_location">iv_ic_location</string>
    <string name="address_sample">Jl. Medan Merdeka Selatan No. 8-9 Jakarta, Kota Jakarta Pusat, DKI Jakarta. Nomor telepon: Telp. 021-3823288 Fax : 3848653, kode pos: 10110.</string>
    <string name="iv_ic_comment">iv_ic_comment</string>
    <string name="iv_ic_favorite">iv_ic_favorite</string>
    <string name="iv_ic_share">iv_ic_share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_lorem">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available.</string>
    <string name="text_comment_reply">write to reply...</string>
    <string name="text_lorem_comment_reply">In publishing and graphic design, Lorem ipsum is a placeholder</string>
    <string name="text_warn_phone_input">Please don\'t input char 0 number</string>
    <string name="delete_item_more_post">Delete</string>
    <string name="edit_item_post_random">Edit</string>
    <string name="tv_warning_number_input_not_empty">input number is required!</string>
    <string name="emotion_like">&#x1f44d;</string>
    <string name="emotion_dislike">&#x1f44e;</string>
    <string name="emotion_applause">&#x1f44f;</string>
    <string name="emotion_love">&#x2764;</string>
    <string name="emotion_angry">&#x1f621;</string>
    <string name="iv_ic_reaction">iv_ic_reaction</string>
</resources>