<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_emotion_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="0dp"
            app:cardCornerRadius="8dp"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emotion_like"
                android:textSize="24sp"
                android:layout_margin="8dp"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_emotion_dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="0dp"
            app:cardCornerRadius="8dp"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emotion_dislike"
                android:textSize="24sp"
                android:layout_margin="8dp"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_emotion_applause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="0dp"
            app:cardCornerRadius="8dp"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emotion_applause"
                android:textSize="24sp"
                android:layout_margin="8dp"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_emotion_love"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="0dp"
            app:cardCornerRadius="8dp"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emotion_love"
                android:textSize="24sp"
                android:layout_margin="8dp"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_emotion_angry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="0dp"
            app:cardCornerRadius="8dp"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emotion_angry"
                android:textSize="24sp"
                android:layout_margin="8dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>