<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/item_cardView_content_random_post"
    android:layout_margin="8dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="@dimen/radius_card_circle"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/item_photo_profile"
                android:layout_width="@dimen/photo_profile_width"
                android:layout_height="@dimen/photo_profile_height"
                android:src="@drawable/sample_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/item_photo_profile"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/txt_input_hint_username"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_date_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/date_sample" />

                <TextView
                    android:id="@+id/item_description_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:text="@string/text_lorem_comment_reply"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>