<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.main.fragment.activity.home.CommentPostRandomActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/root_view_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_detail_profile_user_post_random"
                android:layout_width="@dimen/photo_profile_width"
                android:layout_height="@dimen/photo_profile_height"
                android:src="@drawable/sample_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_detail_profile_user_post_random"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_detail_username_post_random"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/txt_input_hint_username"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_date_post_random"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/date_sample" />

                <TextView
                    android:id="@+id/tv_detail_desc_post_random"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:text="@string/text_lorem"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="16dp">

                    <ImageView
                        android:id="@+id/iv_detail_post_random"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/upload_image"
                        android:transitionName="shared_element_container_imageview"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="200dp"
            app:dividerInsetStart="200dp"
            app:dividerThickness="2dp"
            android:layout_marginTop="16dp"/>

        <com.cooltechworks.views.shimmer.ShimmerRecyclerView
            android:id="@+id/rv_reply_comment"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="end"
            android:visibility="invisible"
            tools:listitem="@layout/item_list_reply_comment"
            tools:itemCount="3"/>


           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               tools:ignore="MissingPrefix">

               <de.hdodenhof.circleimageview.CircleImageView
                   android:id="@+id/iv_photo_profile_user_reply"
                   android:layout_width="35dp"
                   android:layout_height="35dp"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintLeft_toLeftOf="parent"
                   android:src="@drawable/sample_logo"/>

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/et_input_comment"
                   android:layout_width="250dp"
                   android:layout_height="wrap_content"
                   android:hint="@string/text_comment_reply"
                   app:layout_constraintLeft_toRightOf="@id/iv_photo_profile_user_reply"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:layout_marginTop="16dp"
                   android:padding="16dp"
                   android:autofillHints="About this content"
                   android:inputType="textMultiLine"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="send"
                app:cornerRadius="@dimen/button_radius"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
           </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>