<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_soft"
    tools:context=".screen.auth.registerStep.RegisterProfileStep2">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/register_step_dua"
        android:adjustViewBounds="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_step_2_description" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/root_view_padding"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/step_2"
                android:textColor="#243E8A"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/GreenProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:indeterminate="false"
                android:progress="65"
                android:progressDrawable="@drawable/progressbar_state" />

            <com.skydoves.androidveil.VeilLayout
                android:id="@+id/veilLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:veilLayout_baseAlpha="0.6"
                app:veilLayout_baseColor="@android:color/holo_green_dark"
                app:veilLayout_dropOff="0.5"
                app:veilLayout_highlightAlpha="1.0"
                app:veilLayout_highlightColor="@android:color/holo_green_light"
                app:veilLayout_radius="6dp"
                app:veilLayout_shimmerEnable="true"
                app:veilLayout_veiled="true">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hi_name"
                    android:textColor="@color/black"
                    android:layout_marginTop="16dp"/>
            </com.skydoves.androidveil.VeilLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Silahkan isi informasi tambahan dibawah ini"
                android:layout_marginTop="16dp"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="16dp">

               <de.hdodenhof.circleimageview.CircleImageView
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:src="@drawable/sample_logo"/>

               <com.google.android.material.chip.Chip
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="pilih photo profile"
                   style="@style/Theme.MaterialComponents.Light"/>
           </LinearLayout>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Masukan tanggal lahir"
                app:chipIcon="@drawable/ic_baseline_calendar_today_24"
                style="@style/Theme.MaterialComponents.Light"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_step_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_step"
                android:layout_marginTop="16dp"
                app:cornerRadius="@dimen/radius_card_circle"/>


        </LinearLayout>



    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>